<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkPurple"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/new_client_hint_first_name"
                android:maxLength="45"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/new_client_hint_second_name"
                android:maxLength="45"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:textColor="@color/white"
                android:id="@+id/autoCompleteTextViewPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_client_hint_number"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/new_client_hint_address"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:id="@+id/textViewAddress"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:layout_gravity="center"
            android:id="@+id/buttonSave"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>

